--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 
 
 
-<div class="promo">
+<section class="promo">
     <div class="container">
 
 
@@ -86,9 +86,9 @@
 
 
     </div>
-</div>
+</section>
 
-<div class="reasons">
+<section class="reasons">
     <div class="container">
 
 
@@ -143,11 +143,39 @@
 
 
         </div>
+
     </div>
 
 
+</section>
+
+<section class="consultation">
+
+    <div class="container">
+
+        <div class="title title_left">Получите бесплатную консультацию <br>  
+            по подбору пульсометра </div>
+        <div class="consultation__subtitle">Просто заполните форму заявки <br>
+            и мы перезвоним вам в течении 10 минут</div>
+
+        <form action="#" class="feed-form">
+
+            <input name="name" required placeholder="Ваше имя" type="text">
+
+            <input name="phone" required placeholder="Ваш телефон" type="number">
+
+            <input name="email" required placeholder="Ваш e-mail" type="email">
+
+            <button class="button button_form">заказать консультацию</button>
+
+        </form>
+        <!-- /.feed-form -->
+
     </div>
-</div>
+    <!-- /.container -->
+
+</section>
+<!-- /.consultation -->
 
 
     
