add slider and adaptive for carousel

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/font.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/tiny-slider.css">
     <link rel="stylesheet" href="css/normalize.css">
     <title>RunSmart</title>
 </head>
@@ -175,9 +176,30 @@
     <!-- /.container -->
 
 </section>
-<!-- /.consultation -->
+
+<section class="slider">
+    <div class="container">
+        <div class="carousel">
+            <div class="carousel__inner">
+                <div><img src="images/carousel/slide_1.jpg" alt="slide_1"></div>
+                <div><img src="images/carousel/slide_2.jpg" alt="slide_1"></div>
+                <div><img src="images/carousel/slide_3.jpg" alt="slide_1"></div>
+            </div>
+            <!-- /.carousel-inner -->
+            <img class="prev" src="images/carousel/left-arrow.svg" alt="left arrow">
+            <img class="next" src="images/carousel/chevron-right-solid.svg" alt="left arrow">
+        </div>
+        <!-- /.carousel -->
+    </div>
+    <!-- /.container -->
+</section>
 
 
-    
+
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
+<script src="js/script.js"></script>
+
 </body>
 </html>
