add reviews and all tabs. add adaptive

--- a/src/index.html
+++ b/src/index.html
@@ -201,16 +201,16 @@
         <h2 class="title">каталог пульсометров</h2>
 
         <ul class="catalog__tabs">
-            <li class="catalog__tab catalog__tab_active"><div>для фитнеса</div></li>
+            <li class="catalog__tab catalog__tab_active" id="catalog__tab_first"><div>для фитнеса</div></li>
             <!-- /.catalog__tab -->
-            <li class="catalog__tab"><div>для бега</div></li>
+            <li class="catalog__tab" id="catalog__tab_second"><div>для бега</div></li>
             <!-- /.catalog__tab -->
-            <li class="catalog__tab"><div>для триатлона</div></li>
+            <li class="catalog__tab" id="catalog__tab_thirty"><div>для триатлона</div></li>
             <!-- /.catalog__tab -->
         </ul>
         <!-- /.catalog__tabs -->
 
-        <div class="catalog__content catalog__content_active"> <!-- Начинаеются карточки товаров (1 таб) -->
+        <div class="catalog__content catalog__content_active" id="catalog__content_first"> <!-- Начинаеются карточки товаров (1 таб) -->
             <div class="catalog-item">
                 <div class="catalog-item__wrapper">
                     <div class="catalog-item__content catalog-item__content_active">
@@ -389,21 +389,22 @@
         <!-- catalog__content -->
 
 
-        <div class="catalog__content"> <!-- Начинаеются карточки товаров (1 таб) -->
+        <div class="catalog__content" id="catalog__content_second"> <!-- Начинаеются карточки товаров (1 таб) -->
             <div class="catalog-item">
                 <div class="catalog-item__wrapper">
-                    <div class="catalog-item__content">
+                    <div class="catalog-item__content catalog-item__content_active">
                         <img src="images/catalog/pulsometer.png" alt="pulsometr" class="catalog-item__img">
                         <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
                         <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                         <div class="catalog-item__link">ПОДРОБНЕЕ</div>
                     </div>
                     <!-- Смена карточки -->
-                    <ul class="catalog-item__list catalog-item__list_active">
+                    <ul class="catalog-item__list">
                         <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
                         <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
                         <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
                         <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                        <div class="catalog-item__back-link">НАЗАД</div>
                     </ul>
                 </div>
                 <!-- /.catalog-item__wrapper -->
@@ -420,18 +421,19 @@
             <!-- /.catalog__item -->
             <div class="catalog-item">
                 <div class="catalog-item__wrapper">
-                    <div class="catalog-item__content">
+                    <div class="catalog-item__content catalog-item__content_active">
                         <img src="images/catalog/pulsometer.png" alt="pulsometr" class="catalog-item__img">
                         <div class="catalog-item__subtitle">Пульсометр Suunto M2</div>
                         <div class="catalog-item__descr">Пульсометр начального уровня с комфортным тканевым ремешком</div>
                         <div class="catalog-item__link">ПОДРОБНЕЕ</div>
                     </div>
                     <!-- Смена карточки -->
-                    <ul class="catalog-item__list catalog-item__list_active">
+                    <ul class="catalog-item__list">
                         <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
                         <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
                         <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
                         <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                        <div class="catalog-item__back-link">НАЗАД</div>
                     </ul>
                 </div>
                 <!-- /.catalog-item__wrapper -->
@@ -448,18 +450,19 @@
             <!-- /.catalog__item -->
             <div class="catalog-item">
                 <div class="catalog-item__wrapper">
-                    <div class="catalog-item__content">
+                    <div class="catalog-item__content catalog-item__content_active">
                         <img src="images/catalog/pulsometer.png" alt="pulsometr" class="catalog-item__img">
                         <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
                         <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                         <div class="catalog-item__link">ПОДРОБНЕЕ</div>
                     </div>
                     <!-- Смена карточки -->
-                    <ul class="catalog-item__list catalog-item__list_active">
+                    <ul class="catalog-item__list">
                         <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
                         <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
                         <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
                         <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                        <div class="catalog-item__back-link">НАЗАД</div>
                     </ul>
                 </div>
                 <!-- /.catalog-item__wrapper -->
@@ -476,18 +479,19 @@
             <!-- /.catalog__item -->
             <div class="catalog-item">
                 <div class="catalog-item__wrapper">
-                    <div class="catalog-item__content">
+                    <div class="catalog-item__content catalog-item__content_active">
                         <img src="images/catalog/pulsometer.png" alt="pulsometr" class="catalog-item__img">
                         <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
                         <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                         <div class="catalog-item__link">ПОДРОБНЕЕ</div>
                     </div>
                     <!-- Смена карточки -->
-                    <ul class="catalog-item__list catalog-item__list_active">
+                    <ul class="catalog-item__list">
                         <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
                         <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
                         <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
                         <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                        <div class="catalog-item__back-link">НАЗАД</div>
                     </ul>
                 </div>
                 <!-- /.catalog-item__wrapper -->
@@ -505,21 +509,22 @@
         <!-- catalog__content -->
 
 
-        <div class="catalog__content"> <!-- Начинаеются карточки товаров (1 таб) -->
+        <div class="catalog__content" id="catalog__content_thirty"> <!-- Начинаеются карточки товаров (1 таб) -->
             <div class="catalog-item">
                 <div class="catalog-item__wrapper">
-                    <div class="catalog-item__content">
+                    <div class="catalog-item__content catalog-item__content_active">
                         <img src="images/catalog/pulsometer.png" alt="pulsometr" class="catalog-item__img">
                         <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
                         <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                         <div class="catalog-item__link">ПОДРОБНЕЕ</div>
                     </div>
                     <!-- Смена карточки -->
-                    <ul class="catalog-item__list catalog-item__list_active">
+                    <ul class="catalog-item__list">
                         <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
                         <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
                         <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
                         <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                        <div class="catalog-item__back-link">НАЗАД</div>
                     </ul>
                 </div>
                 <!-- /.catalog-item__wrapper -->
@@ -536,18 +541,19 @@
             <!-- /.catalog__item -->
             <div class="catalog-item">
                 <div class="catalog-item__wrapper">
-                    <div class="catalog-item__content">
+                    <div class="catalog-item__content catalog-item__content_active">
                         <img src="images/catalog/pulsometer.png" alt="pulsometr" class="catalog-item__img">
                         <div class="catalog-item__subtitle">Пульсометр Suunto M2</div>
                         <div class="catalog-item__descr">Пульсометр начального уровня с комфортным тканевым ремешком</div>
                         <div class="catalog-item__link">ПОДРОБНЕЕ</div>
                     </div>
                     <!-- Смена карточки -->
-                    <ul class="catalog-item__list catalog-item__list_active">
+                    <ul class="catalog-item__list">
                         <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
                         <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
                         <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
                         <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                        <div class="catalog-item__back-link">НАЗАД</div>
                     </ul>
                 </div>
                 <!-- /.catalog-item__wrapper -->
@@ -566,6 +572,63 @@
         <!-- catalog__content -->
 
 
+    </div>
+    <!-- /.container -->
+</section>
+
+<section class="reviews">
+    <div class="container">
+        <h2 class="title">отзывы клиентов</h2>
+        <div class="reviews-item">
+            <img src="images/reviews/photo_1.jpg" alt="photo_1" class="reviews-item__img">
+            <div class="reviews-item__text">
+                <div class="reviews-item__title">Ирина Иванченко</div>
+                <div class="reviews-item__subtitle">2 полумарафона</div>
+                <div class="reviews-item__descr">
+                    Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали пульсометр, который подошёл именно под мои цели и финансовые возможности.
+                    Через некоторое время решила обновить гаджет - не раздумывая обратилась туда же.
+                    <br><br>
+                    Новые цели - новый гаджет!
+                    <br><br>
+                    Спасибо, RunSmart!
+                </div>
+            </div>
+            <!-- reviews-item__text -->
+        </div>
+        <!-- reviews-item -->
+        <hr>
+        <div class="reviews-item">
+            <img src="images/reviews/photo_2.jpg" alt="photo_2" class="reviews-item__img">
+            <div class="reviews-item__text">
+                <div class="reviews-item__title">Иван Сёмочкин</div>
+                <div class="reviews-item__subtitle">1 полумарафон</div>
+                <div class="reviews-item__descr">
+                    Крутая штука-пульсометр. Обычно без них бегал. Оказывается только хуже себе делал. 
+                    Купил пульсометр, ещё в подарок получил тренировку. Со мной вместе провели первую тренировку, научили пользоваться новым гаджетом. Также объяснили основы анатомии, составили план тренировок на месяц вперёд.
+                    <br><br>
+                    С ними подготовился к своему первому полумарафону! Спасибо!!!
+                </div>
+            </div>
+            <!-- reviews-item__text -->
+        </div>
+        <!-- reviews-item -->
+        <hr>
+        <div class="reviews-item">
+            <img src="images/reviews/photo_3.jpg" alt="photo_3" class="reviews-item__img">
+            <div class="reviews-item__text">
+                <div class="reviews-item__title">Юлия Дашкина</div>
+                <div class="reviews-item__subtitle">2 полумарафона</div>
+                <div class="reviews-item__descr">
+                    Долго не могла начать бегать, т.к. до этого несколько раз начинала, но становилось тяжело и я бросала. От друзей услышала о RunSmart и о беге с контролем пульса и решила попробовать.
+                    <br><br>
+                    Позвонила, ребята поинтересовались моими целями и подобрали очень интересный вариант со скидкой! Теперь бегаю и наслаждаюсь бегом! Пробежала уже 2 полумарафона и несколько более коротких забегов и не намерена останавливаться!
+                    <br><br>
+                    Спасибо!!!
+                </div>
+            </div>
+            <!-- reviews-item__text -->
+        </div>
+        <!-- reviews-item -->
     </div>
     <!-- /.container -->
 </section>
